--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
+theme: jekyll-theme-cayman
 title: SIOBHAN'S BLOG
-description: about CS-learning
+description: Welcome to my learning room:)
 show_downloads: false
-google_analytics:
-theme:
-port: 4001
