--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 title: SIOBHAN'S BLOG
 description: Welcome to my learning room:)
 show_downloads: false
